--- a/about us.html
+++ b/about us.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us | suvaidyam</title>
-    <link rel="stylesheet" href="/css/about us.css" />
-    <link rel="shortcut icon" href="/photos/icon.webp" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/about us.css" />
+    <link rel="shortcut icon" href="./photos/icon.webp" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
       rel="stylesheet"
@@ -20,24 +20,24 @@
     <header class="header">
       <div class="flex-in">
         <div class="p-icon">
-      <a href="/index.html">
-      <img class="icon" src="/photos/icon.webp" alt="icon" /></a>
+      <a href="./index.html">
+      <img class="icon" src="./photos/icon.webp" alt="icon" /></a>
     </div>
       
         <nav class="nav-bar">
           <ul class="ul">
-            <li class="li"><a href="/about us.html" class="active">About Us</a></li>
-            <li class="li"><a href="/where we work.html">Where We Work</a></li>
-            <li class="li"><a href="/contact us.html">Contact Us</a></li>
+            <li class="li"><a href="./about us.html" class="active">About Us</a></li>
+            <li class="li"><a href="./where we work.html">Where We Work</a></li>
+            <li class="li"><a href="./contact us.html">Contact Us</a></li>
           </ul>
         </nav>
-        <a href="/get involved.html"><button class="btn-1">GET INVOLVED</button></a>
+        <a href="./get involved.html"><button class="btn-1">GET INVOLVED</button></a>
       </div>
     </header>
     <div class="main">
       <div class="step-1">
         <div class="step-1-1">
-          <img src="/photos/about us body pic.webp" alt="" />
+          <img src="./photos/about us body pic.webp" alt="" />
         </div>
         <div class="step-1-2">
           <h1>OUR<br />MISSION</h1>
@@ -98,7 +98,7 @@
         </div>
         <div class="step-3-2">
           <div class="step-3-2-1">
-            <img src="/photos/about us amresh sir.webp" alt="" />
+            <img src="./photos/about us amresh sir.webp" alt="" />
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
         <div class="step-5-1">
           <div class="step-5-1-1">
             <div class="step-5-1-1-1">
-              <img src="/photos/about us small pic-1.webp" alt="" />
+              <img src="./photos/about us small pic-1.webp" alt="" />
             </div>
             <div class="step-5-1-1-2">
               <h2>WE ENCOURAGE</h2>
@@ -126,7 +126,7 @@
           </div>
           <div class="step-5-1-1">
             <div class="step-5-1-1-1">
-              <img src="/photos/about us small pic-2.webp" alt="" />
+              <img src="./photos/about us small pic-2.webp" alt="" />
             </div>
             <div class="step-5-1-1-2">
               <h2>WE GUIDE</h2>
@@ -144,7 +144,7 @@
         <div class="step-5-2">
           <div class="step-5-1-1">
             <div class="step-5-1-1-1">
-              <img src="/photos/about us small pic-3.webp" alt="" />
+              <img src="./photos/about us small pic-3.webp" alt="" />
             </div>
             <div class="step-5-1-1-2">
               <h2>WE INVEST</h2>
@@ -159,7 +159,7 @@
           </div>
           <div class="step-5-1-1">
             <div class="step-5-1-1-1">
-              <img src="/photos/about us small pic-4.webp" alt="" />
+              <img src="./photos/about us small pic-4.webp" alt="" />
             </div>
             <div class="step-5-1-1-2">
               <h2>WE FACILITATE</h2>
@@ -175,18 +175,18 @@
       </div>
       <div class="step-6">
         <div class="step-6-1">
-          <a href="/photos/about us gellery-1.webp" target="_blank">
-            <img src="/photos/about us gellery-1.webp" alt=""
+          <a href="./photos/about us gellery-1.webp" target="_blank">
+            <img src="./photos/about us gellery-1.webp" alt=""
           /></a>
         </div>
         <div class="step-6-2">
-          <a href="/photos/about us gellery-2.webp" target="_blank">
-            <img src="/photos/about us gellery-2.webp" alt=""
+          <a href="./photos/about us gellery-2.webp" target="_blank">
+            <img src="./photos/about us gellery-2.webp" alt=""
           /></a>
         </div>
         <div class="step-6-3">
-          <a href="/photos/about us gellery-3.webp">
-            <img src="/photos/about us gellery-3.webp" alt=""
+          <a href="./photos/about us gellery-3.webp">
+            <img src="./photos/about us gellery-3.webp" alt=""
           /></a>
         </div>
       </div>
