--- a/contact us.html
+++ b/contact us.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact | Us</title>
-    <link rel="stylesheet" href="/css/contact us.css" />
-    <link rel="shortcut icon" href="/photos/icon.webp" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/contact us.css" />
+    <link rel="shortcut icon" href="./photos/icon.webp" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Ysabeau:wght@100&display=swap"
       rel="stylesheet"
@@ -14,20 +14,20 @@
   </head>
   <body>
     <header class="header">
-      <a href="/index.html">
-        <img class="icon" src="/photos/icon.webp" alt="icon"
+      <a href="./index.html">
+        <img class="icon" src="./photos/icon.webp" alt="icon"
       /></a>
       <div class="flex-in">
         <nav class="nav-bar">
           <ul class="ul">
-            <li class="li"><a href="/about us.html">About Us</a></li>
-            <li class="li"><a href="/where we work.html">Where We Work</a></li>
+            <li class="li"><a href="./about us.html">About Us</a></li>
+            <li class="li"><a href="./where we work.html">Where We Work</a></li>
             <li class="li">
-              <a href="/contact us.html" class="active">Contact Us</a>
+              <a href="./contact us.html" class="active">Contact Us</a>
             </li>
           </ul>
         </nav>
-        <a href="/get involved.html"
+        <a href="./get involved.html"
           ><button class="btn-1">GET INVOLVED</button></a
         >
       </div>
