--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | suvaidyam</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="shortcut icon" href="/photos/icon.webp" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="./photos/icon.webp" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
       rel="stylesheet"
@@ -19,25 +19,25 @@
 
   <body>
     <header class="header">
-      <a href="/index.html" class="a-icon">
-        <img class="icon" src="/photos/icon.webp" alt="icon"
+      <a href="./index.html" class="a-icon">
+        <img class="icon" src="./photos/icon.webp" alt="icon"
       /></a>
       <div class="flex-in">
         <nav class="nav-bar">
           <ul class="ul">
-            <li class="li"><a href="/about us.html">About Us</a></li>
-            <li class="li"><a href="/where we work.html">Where We Work</a></li>
-            <li class="li"><a href="/contact us.html">Contact Us</a></li>
+            <li class="li"><a href="./about us.html">About Us</a></li>
+            <li class="li"><a href="./where we work.html">Where We Work</a></li>
+            <li class="li"><a href="./contact us.html">Contact Us</a></li>
           </ul>
         </nav>
-        <a href="/get involved.html"
+        <a href="./get involved.html"
           ><button class="btn-1">GET INVOLVED</button></a
         >
       </div>
     </header>
     <div class="main">
       <div class="body-pic">
-        <img class="home-img" src="/photos/home.webp" alt="" />
+        <img class="home-img" src="./photos/home.webp" alt="" />
       </div>
       <div class="step-1">
         <div class="step-1-1">
@@ -81,7 +81,7 @@
       </div>
       <div class="step-3">
         <div class="step-3-1">
-          <img src="/photos/body.webp" alt="" />
+          <img src="./photos/body.webp" alt="" />
         </div>
         <div class="step-3-2">
           <h1>WHY</h1>
@@ -99,7 +99,7 @@
             India out of the life-changing tech industry.
           </p>
           <br /><br />
-          <a href="/get involved.html"
+          <a href="./get involved.html"
             ><button class="btn-2">GET INVOLVED</button></a
           >
         </div>
