--- a/where we work.html
+++ b/where we work.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Where WE Work | suvaidyam</title>
-    <link rel="stylesheet" href="/css/where we work.css" />
-    <link rel="shortcut icon" href="/photos/icon.webp" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/where we work.css" />
+    <link rel="shortcut icon" href="./photos/icon.webp" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
       rel="stylesheet"
@@ -18,20 +18,20 @@
   </head>
   <body>
     <header class="header">
-      <a href="/index.html">
-        <img class="icon" src="/photos/icon.webp" alt="icon"
+      <a href="./index.html">
+        <img class="icon" src="./photos/icon.webp" alt="icon"
       /></a>
       <div class="flex-in">
         <nav class="nav-bar">
           <ul class="ul">
-            <li class="li"><a href="/about us.html">About Us</a></li>
+            <li class="li"><a href="./about us.html">About Us</a></li>
             <li class="li">
-              <a href="/where we work.html" class="active">Where We Work</a>
+              <a href="./where we work.html" class="active">Where We Work</a>
             </li>
-            <li class="li"><a href="/contact us.html">Contact Us</a></li>
+            <li class="li"><a href="./contact us.html">Contact Us</a></li>
           </ul>
         </nav>
-        <a href="/get involved.html"><button class="btn-1">GET INVOLVED</button></a>
+        <a href="./get involved.html"><button class="btn-1">GET INVOLVED</button></a>
       </div>
     </header>
     <div class="main">
@@ -45,7 +45,7 @@
         </p>
       </div>
       <div class="step-2">
-        <img src="/photos/map-ind.webp" alt="" />
+        <img src="./photos/map-ind.webp" alt="" />
       </div>
       <div class="step-3">
         <div class="step-3-1">
