--- a/get involved.html
+++ b/get involved.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Get Involved | Suvaidyam</title>
-    <link rel="stylesheet" href="/css/get involved.css" />
-    <link rel="shortcut icon" href="/photos/icon.webp" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/get involved.css" />
+    <link rel="shortcut icon" href="./photos/icon.webp" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Ysabeau:wght@100&display=swap"
       rel="stylesheet"
@@ -14,24 +14,24 @@
   </head>
   <body>
     <header class="header">
-      <a href="/index.html">
-        <img class="icon" src="/photos/icon.webp" alt="icon"
+      <a href="./index.html">
+        <img class="icon" src="./photos/icon.webp" alt="icon"
       /></a>
       <div class="flex-in">
         <nav class="nav-bar">
           <ul class="ul">
-            <li class="li"><a href="/about us.html">About Us</a></li>
-            <li class="li"><a href="/where we work.html">Where We Work</a></li>
-            <li class="li"><a href="/contact us.html">Contact Us</a></li>
+            <li class="li"><a href="./about us.html">About Us</a></li>
+            <li class="li"><a href="./where we work.html">Where We Work</a></li>
+            <li class="li"><a href="./contact us.html">Contact Us</a></li>
           </ul>
         </nav>
-        <a href="/get involved.html"><button class="btn-1">GET INVOLVED</button></a>
+        <a href="./get involved.html"><button class="btn-1">GET INVOLVED</button></a>
       </div>
     </header>
     <div class="main">
       <div class="step-1">
         <div class="step-1-1">
-          <img src="/photos/get involved img.webp" alt="" />
+          <img src="./photos/get involved img.webp" alt="" />
         </div>
         <div class="step-1-2">
           <h1>Get<br />involved.</h1>
